[gd_scene load_steps=11 format=3 uid="uid://yr20v5ymc5wv"]

[ext_resource type="Script" path="res://enemy.gd" id="1_3bjbx"]
[ext_resource type="Texture2D" uid="uid://deokaky7kabli" path="res://sprites/characters/enemies/Acid Ooze/AcidOozeIdleSide.png" id="2_k24l6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_23djl"]
atlas = ExtResource("2_k24l6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_flunk"]
atlas = ExtResource("2_k24l6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtxl3"]
atlas = ExtResource("2_k24l6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_snqpt"]
atlas = ExtResource("2_k24l6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccg06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23djl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flunk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtxl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snqpt")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0m2p8"]
radius = 96.13

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uo2r"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5q1sr"]
size = Vector2(17, 17)

[node name="CharacterBody2D2" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_3bjbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ccg06")
animation = &"idle"
autoplay = "idle"

[node name="pathfinding" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pathfinding"]
shape = SubResource("CircleShape2D_0m2p8")
debug_color = Color(0.988235, 0.0509804, 0.215686, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_8uo2r")

[node name="battle" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="battle"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_5q1sr")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 94)

[connection signal="body_entered" from="pathfinding" to="." method="_on_pathfinding_body_entered"]
[connection signal="body_exited" from="pathfinding" to="." method="_on_pathfinding_body_exited"]
[connection signal="area_entered" from="battle" to="." method="_on_battle_area_entered"]
